@@ -14,6 +14,7 @@
     <maven.compiler.source>20</maven.compiler.source>
     <maven.compiler.target>20</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <surefire.useModulePath>false</surefire.useModulePath>
   </properties>
 
 
@@ -31,7 +32,7 @@
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-jsonb</artifactId>
-      <version>1.4</version>
+      <version>1.6-RC6</version>
     </dependency>
     <dependency>
       <groupId>io.avaje</groupId>
@@ -47,6 +48,11 @@
       <groupId>io.helidon.nima.http.media</groupId>
       <artifactId>helidon-nima-http-media-jsonb</artifactId>
       <version>${nima.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-http-client</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>io.avaje</groupId>
@@ -69,6 +75,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.10.1</version>
         <configuration>
+          <enablePreview>true</enablePreview>
           <release>20</release>
           <annotationProcessorPaths>
             <path>
@@ -84,7 +91,7 @@
             <path>
               <groupId>io.avaje</groupId>
               <artifactId>avaje-jsonb-generator</artifactId>
-              <version>1.4</version>
+              <version>1.6-RC6</version>
             </path>
           </annotationProcessorPaths>
             <source>19</source>
@@ -92,9 +99,17 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0</version>
+        <configuration>
+          <argLine>--enable-preview</argLine>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>io.repaint.maven</groupId>
         <artifactId>tiles-maven-plugin</artifactId>
-        <version>2.22</version>
+        <version>2.34</version>
         <extensions>true</extensions>
         <configuration>
           <tiles>
